# Tarot-Web

./: .env.build  .env.example  .env.test  .eslintrc.js  .gitignore  .prettierrc.json  README.md  app.example.json  app.json  babel.config.js  debug.keystore  eas.example.json  eas.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  test-cases.md  test-report.md  tsconfig.json
.github/workflows/: android.yml
android/: .project  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
app/: _layout.tsx
app/(tabs)/: _layout.tsx  profile.tsx  store.tsx  tarot-reading.tsx
backend/: README.md  pyproject.toml  test_endpoints.py
backend/app/: main.py
backend/tests/: test_imports.py
components/: StyledText.tsx
components/__tests__/: StyledText-test.js
docs/: AD_INTEGRATION_STRATEGY.md  ad-integration-technical-requirements.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.new.tsx  App.tsx
frontend/src/contexts/: ad-context.tsx  (+3 more)
functions/: api.js
ios/app/: Info.plist
ios/app.xcodeproj/: project.pbxproj
patches/: expo+49.0.23.patch  expo-ads-admob+12.0.0.patch  expo-ads-admob+12.0.1.patch  react-native-reanimated+3.6.1.patch  template.build.gradle
scripts/: load-test-env.js
src/: App.vue
src/config/: ads.d.ts  ads.ts  env.d.ts
src/contexts/: ad-context.tsx  currency-context.tsx  experience-context.tsx  language-context.tsx
src/data/: tarot-cards.ts
src/theme/: colors.ts  index.ts
src/translations/: en.ts  zh.ts
src/types/: ironsource.d.ts  tarot.ts
(+34 files in other folders)
